src/test/deca/context/invalid/provided/condition_if5.deca
/*/ Description:
//    Programme utilisant une condition if de façon incorrecte.
//
// Resultats: Ligne 11 Erreur contextuelle
//
// Historique:
//    cree le 01/01/2022*/

{
	
        if(5){
        	println(j);
        }
}
